commit to repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping_cart?useSSL=false
+config.upload_folder=C://Users//Admin//Documents//uploads//
 spring.datasource.username=root
 spring.datasource.password=
 server.port=9999
