--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping_cart?useSSL=false
+spring.servlet.multipart.max-file-size= -1
+spring.servlet.multipart.max-request-size= -1
 config.upload_folder=C://Users//Admin//Documents//uploads//
 spring.datasource.username=root
 spring.datasource.password=
